# OpenJones3D

./: .editorconfig  .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
Jones3D/: CMakeLists.txt  Indy3D.c  Indy3D.h  dllmain.c  exemain.cpp  sha256.h  types.h
Jones3D/Display/: JonesConsole.c  JonesConsole.h  JonesDisplay.c  JonesDisplay.h  JonesHud.c  JonesHud.h  JonesHudConstants.h  jonesConfig.c  jonesConfig.h
Jones3D/Gui/: JonesDialog.c  JonesDialog.h
Jones3D/Main/: JonesFile.c  JonesFile.h  JonesLevel.h  JonesMain.c  JonesMain.h  jonesString.c  jonesString.h
Jones3D/Play/: JonesControl.c  JonesControl.h  jonesCog.c  jonesCog.h  jonesInventory.c  jonesInventory.h
Jones3D/RTI/: addresses.h  symbols.h
Libs/: CMakeLists.txt
Libs/j3dcore/: CMakeLists.txt  j3d.h.in  j3dhook.h
Libs/rdroid/: CMakeLists.txt  types.h
Libs/rdroid/Engine/: rdCamera.c  rdCamera.h  rdCanvas.c  rdCanvas.h  rdClip.c  rdClip.h  rdKeyframe.c  rdKeyframe.h  rdLight.c  rdLight.h  rdMaterial.c  rdMaterial.h  rdPuppet.c  rdPuppet.h  rdQClip.c  rdQClip.h  rdThing.c  rdThing.h
Libs/rdroid/Main/: rdroid.c  rdroid.h
Libs/rdroid/Math/: rdMath.c  rdMath.h  rdMatrix.c  rdMatrix.h  rdVector.c  rdVector.h
Libs/rdroid/Primitives/: rdFont.c  rdFont.h  rdModel3.c  rdModel3.h  rdParticle.c  rdParticle.h  rdPolyline.c  rdPolyline.h  rdPrimit2.c  rdPrimit2.h  rdPrimit3.c  rdPrimit3.h  rdSprite.c  rdSprite.h  rdWallpaper.c  rdWallpaper.h
Libs/rdroid/RTI/: addresses.h  symbols.h
Libs/rdroid/Raster/: rdCache.c  rdCache.h  rdFace.c  rdFace.h
Libs/sith/: CMakeLists.txt  types.h
Libs/sith/AI/: sithAI.c  sithAI.h  sithAIAwareness.c  sithAIAwareness.h  sithAIClass.c  sithAIClass.h  sithAIInstinct.c  sithAIInstinct.h  sithAIMove.c  sithAIMove.h  sithAIUtil.c  sithAIUtil.h
Libs/sith/Cog/: cog.l  cog.y  flex.skel  sithCog.c  sithCog.h  sithCogExec.c  sithCogExec.h  sithCogFlex.c  sithCogFunction.c  sithCogFunction.h  sithCogFunctionAI.c  sithCogFunctionAI.h  sithCogFunctionPlayer.c  sithCogFunctionPlayer.h  sithCogFunctionSector.c  sithCogFunctionSector.h  sithCogFunctionSound.c  sithCogFunctionSound.h  sithCogFunctionSurface.c  sithCogFunctionSurface.h  sithCogFunctionThing.c  sithCogFunctionThing.h  sithCogParse.c  sithCogParse.h  sithCogYacc.c  sithCogYacc.h
Libs/sith/Devices/: sithComm.c  sithComm.h  sithConsole.c  sithConsole.h  sithControl.c  sithControl.h  sithSound.c  sithSound.h  sithSoundMixer.c  sithSoundMixer.h
Libs/sith/Dss/: sithDSS.c  sithDSS.h  sithDSSCog.c  sithDSSCog.h  sithDSSThing.c  sithDSSThing.h  sithGamesave.c  sithGamesave.h  sithMulti.c  sithMulti.h
Libs/sith/Engine/: sithAnimate.c  sithAnimate.h  sithCamera.c  sithCamera.h  sithCollision.c  sithCollision.h  sithIntersect.c  sithIntersect.h  sithParticle.c  sithParticle.h  sithPathMove.c  sithPathMove.h  sithPhysics.c  sithPhysics.h  sithPuppet.c  sithPuppet.h  sithRender.c  sithRender.h  sithRenderSky.c  sithRenderSky.h  sithShadow.c  sithShadow.h
Libs/sith/Gameplay/: sithEvent.c  sithEvent.h  sithFX.c  sithFX.h  sithInventory.c  sithInventory.h  sithOverlayMap.c  sithOverlayMap.h  sithPlayer.c  sithPlayer.h  sithPlayerActions.c  sithPlayerActions.h  sithPlayerControls.c  sithPlayerControls.h  sithTime.c  sithTime.h  sithVehicleControls.c  sithVehicleControls.h  sithWhip.c  sithWhip.h
Libs/sith/Main/: sithCommand.c  sithCommand.h  sithMain.c  sithMain.h  sithString.c  sithString.h
Libs/sith/RTI/: addresses.h  symbols.h
Libs/sith/World/: sithActor.c  sithActor.h  sithExplosion.c  sithExplosion.h  sithItem.c  sithItem.h  sithMaterial.c  sithMaterial.h  sithModel.c  sithModel.h  sithPVS.c  sithPVS.h  sithSector.c  sithSector.h  sithSoundClass.c  sithSoundClass.h  sithSprite.c  sithSprite.h  sithSurface.c  sithSurface.h  sithTemplate.c  sithTemplate.h  sithThing.c  sithThing.h  sithVoice.c  sithVoice.h  sithWeapon.c  sithWeapon.h  sithWorld.c  sithWorld.h
Libs/smush/: CMakeLists.txt  SmushPlay.h
Libs/sound/: AudioLib.c  AudioLib.h  CMakeLists.txt  Driver.c  Driver.h  Sound.c  Sound.h  types.h
Libs/sound/RTI/: addresses.h  symbols.h
Libs/std/: CMakeLists.txt  types.h
Libs/std/General/: std.c  std.h  stdBmp.c  stdBmp.h  stdCircBuf.c  stdCircBuf.h  stdColor.c  stdColor.h  stdConffile.c  stdConffile.h  stdEffect.c  stdEffect.h  stdFileUtil.c  stdFileUtil.h  stdFnames.c  stdFnames.h  stdHashtbl.c  stdHashtbl.h  stdLinkList.c  stdLinkList.h  stdMath.c  stdMath.h  stdMathTables.h  stdMemory.c  stdMemory.h  stdPlatform.c  stdPlatform.h  stdStrTable.c  stdStrTable.h  stdUtil.c  stdUtil.h
Libs/std/RTI/: addresses.h  symbols.h
Libs/std/Win95/: std3D.c  std3D.h  stdComm.c  stdComm.h  stdConsole.c  stdConsole.h  stdControl.c  stdControl.h  stdDisplay.c  stdDisplay.h  stdGob.c  stdGob.h  stdWin95.c  stdWin95.h
Libs/w32util/: CMakeLists.txt  wuRegistry.c  wuRegistry.h
Libs/w32util/RTI/: addresses.h  symbols.h
Libs/wkernel/: CMakeLists.txt  types.h  wkernel.c  wkernel.h
Libs/wkernel/RTI/: addresses.h  symbols.h
Programs/: CMakeLists.txt
Programs/byacc/: CMakeLists.txt  main.c
Programs/flex/: CMakeLists.txt  Makefile  README  flexdef.h  main.c
Resources/3do/: gen_fadeplate.3do  gen_fadeplate_b.3do
Resources/mat/: jonesbook antiqua24.gcf  jonesbook antiqua24.mat  jonescalisto mt16.mat  jonescalisto mt20.mat  jonescomic sans ms14.mat
Scripts/: analyze.py  gencogparser.py
